pelenaca: imagenes añadidas

--- a/v-home/index.html
+++ b/v-home/index.html
@@ -172,9 +172,8 @@
                 <h3 class="ws10-u-heading--4-lt">Safety Starter Kit</h3>
                 <h4 class="ws10-u-heading--3-lt">V-Home pone a tu disposición el servicio de vigilancia y control más completo con el Safety Starter Kit</h4>
                 <picture>
-                    <source class="vf-image" srcset="img/safety-kit/image.webp" type="image/webp">
-                    <source class="vf-image" srcset="img/safety-kit/image.png" type="image/png">
-                    <img class="vf-image" src="img/safety-kit/image.png" alt="Safety Starter Kit" >
+                    <source class="vf-image" srcset="img/safety-kit/safetystarterkit.png" type="image/png">
+                    <img class="vf-image" src="img/safety-kit/safetystarterkit.png" alt="Safety Starter Kit" >
                 </picture>
                 <p>Controla tu casa desde tu móvil con V-Home. Mediante este eficaz servicio de monitorización podrás estar conectado a tu hogar y saber lo que ocurre en todo momento desde tu smarthphone.</p>
                 <a class="ws10-c-link-chevron ws10-c-link-chevron--primary" data-backdrop="vf-backdrop-kit" data-backdrop-close aria-haspopup="dialog" data-analytics-category="cta" data-analytics-element="modulo ventajas  vhome" data-analytics-context="descubre el kit" data-analytics-id="1500108890064-4983571709576">Descubre el Kit
@@ -246,8 +245,7 @@
                                                     <p class="ws10-c-tray-quick-action__title">multifunción</p>
                                                 </div>
                                                 <picture class="ws10-c-tray-quick-action__image">
-                                                    <source srcset="img/safety-kit/backdrop/sensor.webp" type="image/webp">
-                                                    <img src="img/safety-kit/backdrop/sensor.png" alt="Sensor multifunción V-Home" >
+                                                    <img src="img/safety-kit/backdrop/sensor-multifuncion.png" alt="Sensor multifunción V-Home" >
                                                 </picture>
                                             </div>
                                         </div> 
