--- a/summerdelight/index.html
+++ b/summerdelight/index.html
@@ -49,8 +49,8 @@
 	</div>	<div class="ws10-o-wrapper ws10-u--pt4x">
 		<!-- Filters -->
 		<section class="ws10-u--pt4x ws10-u--pb4x">
-		  <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center">
-		    <span class="ws10-c-filter ws10-u--mr2x vf-filter-one" data-js-vf="_filter">
+		  <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center@desktop ws10-u--pl4x@mobile">
+		    <span class="ws10-c-filter ws10-u--mr2x@desktop vf-filter-one" data-js-vf="_filter">
 		      <input
 		        type="checkbox"
 		        class="ws10-c-filter__input"
@@ -67,7 +67,7 @@
 		      </label>
 		    </span>
 		    <span
-		      class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x ws10-u--mt4x@mobile vf-filter-two"
+		      class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x@desktop ws10-u--mt2x@mobile vf-filter-two"
 		      data-js-vf="_filter">
 		      <input
 		        type="checkbox"
@@ -85,7 +85,8 @@
 		      > Y si tu tarifa es familiar… </label>
 		    </span>
 		  </div>
-		</section>		<!-- Section Cards TV -->
+		</section>
+		<!-- Section Cards TV -->
 		<section class="vf-cards-tv ws10-u--pt4x ws10-u--pb4x">
 		  <div class="ws10-o-layout ws10-flex__align-items--end">
 		      <div
@@ -939,7 +940,7 @@
 		      <svg
 		        class="ws10-c-link-chevron__icon"
 		        xmlns="http://www.w3.org/2000/svg"
-		        xmlns:xlink="http://www.w3.org/1999/xlink" 
+		        xmlns:xlink="http://www.w3.org/1999/xlink"
 		        width="24px"
 		        height="24px"
 		      >
