--- a/summerdelight/index.html
+++ b/summerdelight/index.html
@@ -46,7 +46,8 @@
 	      </div>
 	    </div>
 	  </div>
-	</div>	<div class="ws10-o-wrapper ws10-u--pt4x">
+	</div>
+	<div class="ws10-o-wrapper ws10-u--pt4x">
 		<!-- Filters -->
 		<section class="ws10-u--pt4x ws10-u--pb4x">
 		  <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center@desktop ws10-u--pl4x@mobile">
@@ -792,7 +793,7 @@
 		                     src="img/timeline/icon-tv-everywhere-home.png"
 		                     data-ws10-js="lazy-load"
 		                     loading="lazy"
-		                     alt="">
+		                     alt="¿Eres cliente de Vodafone?">
 		                 <p class="ws10-c-timeline-steps__title">¿Eres cliente de Vodafone?</p>
 		                <p class=" ws10-u-heading--5-lt	ws10-c-timeline-steps__text">Solo por ser cliente Vodafone tanto si eres cliente de móvil, solo fibra, móvil+fibra o si tienes una tarifa familiar.</p>
 		            </li>
@@ -801,7 +802,7 @@
 		                     src="img/timeline/icon-channel_variety.png"
 		                     data-ws10-js="lazy-load"
 		                     loading="lazy"
-		                     alt="">
+		                     alt="Elige el pack de TV">
 		                 <p class="ws10-c-timeline-steps__title">Elige el pack de TV</p>
 		                <p class=" ws10-u-heading--5-lt	ws10-c-timeline-steps__text">Escoge uno de los packs que te mostramos.</p>
 		            </li>
@@ -810,7 +811,7 @@
 		                     src="img/timeline/icon-mobile.png"
 		                     data-ws10-js="lazy-load"
 		                     loading="lazy"
-		                     alt="">
+		                     alt="Accede a Mi Vodafone">
 		                 <p class="ws10-c-timeline-steps__title">Accede a Mi Vodafone</p>
 		                <p class=" ws10-u-heading--5-lt	ws10-c-timeline-steps__text">Entra en la app Mi Vodafone, elige el pack de Vodafone TV que más te guste y actívalo.</p>
 		            </li>
@@ -819,7 +820,7 @@
 		                     src="img/timeline/icon-heart-tv.png"
 		                     data-ws10-js="lazy-load"
 		                     loading="lazy"
-		                     alt="">
+		                     alt="Activa tu pack">
 		                 <p class="ws10-c-timeline-steps__title">Activa tu pack</p>
 		                <p class=" ws10-u-heading--5-lt	ws10-c-timeline-steps__text">Activa el Pack de TV que más encaje contigo.</p>
 		            </li>
@@ -828,7 +829,7 @@
 		                     src="img/timeline/icon-play-circle.png"
 		                     data-ws10-js="lazy-load"
 		                     loading="lazy"
-		                     alt="">
+		                     alt="Disfruta">
 		                 <p class="ws10-c-timeline-steps__title">Disfruta</p>
 		                <p class=" ws10-u-heading--5-lt	ws10-c-timeline-steps__text">Disfrutalo hasta el 15 de Septiembre de 2021, a partir de esa fecha tu pack se desactivará sin que tengas que hacer nada.</p>
 		            </li>
