SummerDelight - Filters and Hero align

--- a/summerdelight/index.html
+++ b/summerdelight/index.html
@@ -3,7 +3,7 @@
 	<link href="css/styles.css" rel="stylesheet" data-ws10-microcss  />
 
 	<!-- Section Hero -->
-	<div class="ws10-c-hero-dmp ws10-c-hero-dmp--dark" data-ws10-js="hero-dmp">
+	<div class="vf-hero ws10-c-hero-dmp ws10-c-hero-dmp--dark" data-ws10-js="hero-dmp">
 	  <picture class="ws10-c-hero-dmp__w-img">
 	    <source srcset="img/cabecera-desktop.webp" type="image/webp" />
 	    <source srcset="img/cabecera-desktop.png" type="image/png" />
@@ -49,8 +49,8 @@
 	</div>
 	<div class="ws10-o-wrapper ws10-u--pt4x">
 		<!-- Filters -->
-		<section class="ws10-u--pt4x ws10-u--pb4x">
-		  <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center@desktop ws10-u--pl4x@mobile">
+		<section class="vf-filters ws10-u--pt4x ws10-u--pb4x">
+		  <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--left ws10-u--pl4x@mobile">
 		    <span class="ws10-c-filter ws10-u--mr2x@desktop vf-filter-one" data-js-vf="_filter">
 		      <input
 		        type="checkbox"
