cambio texto padres mayores

--- a/padres-mayores/cabecera/index.html
+++ b/padres-mayores/cabecera/index.html
@@ -1,11 +1,11 @@
-<link href="css/ws10.css?v=5c673f83e7979c2d751954ceeee2d711" rel="stylesheet">
-<link href="css/styles.css?v=72a0ff306a65b1cfef1916a6278233b8" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=8c2b6c2b077e0c2e109ebe804693dd6b" rel="stylesheet">
+<link href="css/styles.css?v=fdcb701463965d8df844d7982d2bfb60" rel="stylesheet" data-ws10-microcss="">
 <div class="vfes-ms-content" id="cabecera" style="visibility: hidden;opacity: 0">
 	<div class="vfms-banner--bg ws10-u--pt12x@desktop ws10-u--pt12x@tablet ws10-u--pt6x@mobile">  
 		<div class="ws10-o-wrapper">
 			<div class="ws10-o-layout">
 					<div class="ws10-o-layout__item ws10-u--1/2@desktop ws10-u--1/2@tablet ws10-u--1/1@mobile">
-						<h2 class="ws10-u-heading--4">Productos para mayores</h2>
+						<h2 class="ws10-u-heading--4">Productos para tus padres</h2>
 						<p class="ws10-u-heading--2-lt">Descubre nuestros <strong> productos para tus padres</strong> y disfruta con ellos</p>
 						<div class="ws10-o-layout ws10-u--mt12x@desktop  ws10-u--hidden-visually-until@desktop">
 							<div class="ws10-o-layout__item ws10-u--1/3@desktop">
@@ -57,4 +57,4 @@
 	</div>
 
 <script src="js/ws10.js?v=fafeed6bb63109c2c88b9d392684cae4"></script>
-<script src="js/main.js?v=05c21dd031f770deb1574c1ce6ac204d"></script>
+<script src="js/main.js?v=4e5c9a25cb12324fcb9f345a1d234e08"></script>
