alsoIncluded añadido a todas las tarifas

--- a/destiny4.0/colectivos/ilimitada_avanzada_600/index.html
+++ b/destiny4.0/colectivos/ilimitada_avanzada_600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=f9d80d26e56aa2459e82a1cb7ddc9ba6" rel="stylesheet">
-<link href="css/styles.css?v=2e1d283bc7678f2fb8325a255bed8544" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=5b31a747b93e200c288ee7f44cac651a" rel="stylesheet">
+<link href="css/styles.css?v=224a11b09a811807440c908b925f17ce" rel="stylesheet" data-ws10-microcss="">
 
 <script>
   utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 600mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+600mbps fibra", "promotion_price_name": "promo colectivos + promo 50% one ilimitada avanzada 600mb", "promotion_gift_name": "", "product_id": "168446377", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "product_variant": "datos ilimitados", "promotion_price_name": "2 x 1 ilimitada esencial gratis", "promotion_gift_name": "", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack universal", "product_category": "tv", "promotion_price_name": "universal gratis", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada avanzada 600mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+600mbps fibra","promotion_price_name": "promo colectivos + promo 50% one ilimitada avanzada 600mb","promotion_gift_name": "","product_id": "168446377","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack universal","product_category": "tv","promotion_price_name": "universal gratis","promotion_gift_name": "","product_id": ""}]}]
@@ -758,7 +758,7 @@
         </section>        <!-- TAMBIÉN INCLUIDO -->
         <section class="vf-mobile ws10-u--pt12x">
             <h3 class="ws10-u-heading--3">
-                <strong>También incluido en Vodafone One ilimitada Avanzada 600Mbps</strong>
+                <strong>También incluido en Vodafone One ilimitada Plus 300Mbps</strong>
             </h3>
           <!-- CAROUSEL -->
           <div class="ws10-c-carousel ws10-c-carousel--secondary ws10-c-carousel--no-lateral-padding ws10-c-carousel--secondary-left ws10-c-carousel--align-bottom ws10-u--pl0" data-ws10-js="carousel" data-config="{
@@ -786,74 +786,51 @@
                                             }
                                         }">
             <ul class="ws10-c-carousel__list js-carousel-list" id="idUl" aria-labelledby="idList">
-              <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                <div class="ws10-c-card ws10-c-card--no-shadow">
-                  <div class="ws10-c-card-addons">
-                    <div class="ws10-c-card-addons__box">
-                      <img class="ws10-u--pr1x" src="img/section-addons/secureNet.svg?v=862eb0f074fd96894f93cef121d76b9a" alt="SecureNet">
-                      <h3 class="ws10-c-card-addons__title"><strong>Secure Net</strong></h3>
+                 <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                    <div class="ws10-c-card ws10-c-card--no-shadow">
+                        <div class="ws10-c-card-addons">
+                        <div class="ws10-c-card-addons__box">
+                            <img class="ws10-u--pr1x" src="img/section-addons/secureNet.svg?v=862eb0f074fd96894f93cef121d76b9a" alt="SecureNet">
+                            <h3 class="ws10-c-card-addons__title"><strong>Secure Net</strong></h3>
+                        </div>
+                        <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Para que <strong>navegues sin riesgos en Internet por la red móvil y de acceso fijo de Vodafone</strong>, protegiéndote de virus (malware) y páginas fraudulentas (phishing).</p>
+                        <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 1€/mes.</p>
+                        </div>
                     </div>
-                    <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Para que
-                      <strong>navegues sin riesgos en Internet por la red móvil y de
-                        acceso fijo de Vodafone</strong>, protegiéndote de virus
-                      (malware) y páginas fraudulentas (phishing).</p>
-                    <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                      durante 3 meses, después 1€/mes.</p>
-                  </div>
-                </div>
-              </li>
-              <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                <div class="ws10-c-card ws10-c-card--no-shadow">
-                  <div class="ws10-c-card-addons">
-                    <div class="ws10-c-card-addons__box">
-                      <img class="ws10-u--pr1x" src="img/section-addons/numberOne.svg?v=07086a0ab64e116ed337deb5cc10b402" alt="Tidal">
-                      <h3 class="ws10-c-card-addons__title"><strong>OneNumber</strong></h3>
+                    </li>         <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                    <div class="ws10-c-card ws10-c-card--no-shadow">
+                        <div class="ws10-c-card-addons">
+                        <div class="ws10-c-card-addons__box">
+                            <img class="ws10-u--pr1x" src="img/section-addons/numberOne.svg?v=07086a0ab64e116ed337deb5cc10b402" alt="Tidal">
+                            <h3 class="ws10-c-card-addons__title"><strong>OneNumber</strong></h3>
+                        </div>
+                        <p class="ws10-c-card-addons__paragraph ws10-u--pb6x"><strong>Mismo número de teléfono y misma tarifa de voz y datos en todos tus dispositivos</strong> sin necesidad de tener el móvil cerca y sin cambiar la SIM.</p>
+                        <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 1 mes, después 5€/mes para smartwatch, Tablet o teléfono secundario y 1€/mes para Smart speaker con Alexa.</p>
+                        </div>
                     </div>
-                    <p class="ws10-c-card-addons__paragraph ws10-u--pb5x">Mismo número
-                      de teléfono y misma tarifa de voz y datos en todos tus
-                      dispositivos sin necesidad de tener el móvil cerca y sin cambiar
-                      la SIM.</p>
-                    <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                      durante 1 mes, después 5€/mes para smartwatch, Tablet o teléfono
-                      secundario y 1€/mes para Smart speaker con Alexa.</p>
-                  </div>
-                </div>
-              </li>
-              <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                <div class="ws10-c-card ws10-c-card--no-shadow">
-                  <div class="ws10-c-card-addons">
-                    <div class="ws10-c-card-addons__box">
-                      <img class="ws10-u--pr1x" src="img/section-addons/securenet-family.svg?v=48adeb63fc6ff54242b372b68c0bf9ec" alt="SecureNet">
-                      <h3 class="ws10-c-card-addons__title"><strong>Secure Net Family</strong>
-                      </h3>
+                    </li>         <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                    <div class="ws10-c-card ws10-c-card--no-shadow">
+                        <div class="ws10-c-card-addons">
+                        <div class="ws10-c-card-addons__box">
+                            <img class="ws10-u--pr1x" src="img/section-addons/securenet-family.svg?v=48adeb63fc6ff54242b372b68c0bf9ec" alt="SecureNet Family">
+                            <h3 class="ws10-c-card-addons__title"><strong>Secure Net Family</strong></h3>
+                        </div>
+                        <p class="ws10-c-card-addons__paragraph ws10-u--pb6x"><strong>Secure Net Family</strong> te protege de <strong>virus (malware) y páginas fraudulentas (phishing)</strong>, permitiendo además aplicar políticas de control parental en todos slos dispositivos de tu hogar.</p>
+                        <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 5€/mes (IVA incluido).</p>
+                        </div>
                     </div>
-                    <p class="ws10-c-card-addons__paragraph ws10-u--pb6x"><strong>Secure
-                        Net Family</strong>
-                      te protege de
-                      <strong>virus (malware) y páginas fraudulentas (phishing)</strong>,
-                      permitiendo además aplicar políticas de control parental en todos
-                      los dispositivos de tu hogar.</p>
-                    <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                      durante 3 meses, después 5€/mes (IVA incluido).</p>
-                  </div>
-                </div>
-              </li>
-              <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                <div class="ws10-c-card ws10-c-card--no-shadow">
-                  <div class="ws10-c-card-addons">
-                    <div class="ws10-c-card-addons__box">
-                      <img class="ws10-u--pr1x" src="img/section-addons/tidal.svg?v=4abc131faca749581d3cbd2f2965d13b" alt="Tidal">
-                      <h3 class="ws10-c-card-addons__title"><strong>TIDAL</strong></h3>
+                    </li>         <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                    <div class="ws10-c-card ws10-c-card--no-shadow">
+                        <div class="ws10-c-card-addons">
+                        <div class="ws10-c-card-addons__box">
+                            <img class="ws10-u--pr1x" src="img/section-addons/tidal.svg?v=4abc131faca749581d3cbd2f2965d13b" alt="Tidal">
+                            <h3 class="ws10-c-card-addons__title"><strong>TIDAL</strong></h3>
+                        </div>
+                        <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Plataforma de música en streaming para que disfrutes de tu música con la mejor calidad de audio.</p>
+                        <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 7,99€/mes.</p>
+                        </div>
                     </div>
-                    <p class="ws10-c-card-addons__paragraph ws10-u--pb8x">Plataforma de
-                      música en streaming para que disfrutes de tu música con la mejor
-                      calidad de audio.</p>
-                    <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                      durante 3 meses, después 7,99€/mes.</p>
-                  </div>
-                </div>
-              </li>
-            </ul>
+                    </li>    </ul>
             <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;">(*)Todos los servicios podrás gestionarlos en la App Mi Vodafone</span>
           </div>
         </section>
@@ -1258,4 +1235,4 @@
 
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=88e5850884077d0335ab83b066ffe714"></script>
+<script src="js/main.js?v=66fa3dc742cff9174f4c5eb9668b0386"></script>
