--- a/destiny4.0/one/ilimitada-plus-600/index.html
+++ b/destiny4.0/one/ilimitada-plus-600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=1cc4d42b9e7573449604078f450ffffe" rel="stylesheet">
-<link href="css/styles.css?v=736bf2023654ca9612d0fa7a450f32ce" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=8e517017b024d867713ec63fb90cacea" rel="stylesheet">
+<link href="css/styles.css?v=1fdad3badb4c8ac80c5f85338ada0994" rel="stylesheet" data-ws10-microcss="">
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="ilimitada" style="visibility: hidden;opacity: 0">
 <script>
 
@@ -684,7 +684,9 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                   </div>
                 </section>                <!-- TAMBIÉN INCLUIDO -->
                 <section class="vf-mobile ws10-u--pt12x">
-                  <h3 class="ws10-u-heading--3"><strong>También incluido en </strong></h3>
+                    <h3 class="ws10-u-heading--3">
+                        <strong>También incluido en Vodafone One ilimitada Plus x2 600Mbps</strong>
+                    </h3>
                   <!-- CAROUSEL -->
                   <div class="ws10-c-carousel ws10-c-carousel--secondary ws10-c-carousel--no-lateral-padding ws10-c-carousel--secondary-left ws10-c-carousel--align-bottom ws10-u--pl0" data-ws10-js="carousel" data-config="{
                                                     &quot;responsive&quot;: {
@@ -711,77 +713,55 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                                                     }
                                                 }">
                     <ul class="ws10-c-carousel__list js-carousel-list" id="idUl" aria-labelledby="idList">
-                      <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                        <div class="ws10-c-card ws10-c-card--no-shadow">
-                          <div class="ws10-c-card-addons">
-                            <div class="ws10-c-card-addons__box">
-                              <img class="ws10-u--pr1x" src="img/section-addons/secureNet.svg?v=862eb0f074fd96894f93cef121d76b9a" alt="SecureNet">
-                              <h3 class="ws10-c-card-addons__title"><strong>Secure Net</strong></h3>
+                         <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                            <div class="ws10-c-card ws10-c-card--no-shadow">
+                                <div class="ws10-c-card-addons">
+                                <div class="ws10-c-card-addons__box">
+                                    <img class="ws10-u--pr1x" src="img/section-addons/secureNet.svg?v=862eb0f074fd96894f93cef121d76b9a" alt="SecureNet">
+                                    <h3 class="ws10-c-card-addons__title"><strong>Secure Net</strong></h3>
+                                </div>
+                                <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Para que <strong>navegues sin riesgos en Internet por la red móvil y de acceso fijo de Vodafone</strong>, protegiéndote de virus (malware) y páginas fraudulentas (phishing).</p>
+                                <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 1€/mes.</p>
+                                </div>
                             </div>
-                            <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Para que
-                              <strong>navegues sin riesgos en Internet por la red móvil y de
-                                acceso fijo de Vodafone</strong>, protegiéndote de virus
-                              (malware) y páginas fraudulentas (phishing).</p>
-                            <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                              durante 3 meses, después 1€/mes.</p>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                        <div class="ws10-c-card ws10-c-card--no-shadow">
-                          <div class="ws10-c-card-addons">
-                            <div class="ws10-c-card-addons__box">
-                              <img class="ws10-u--pr1x" src="img/section-addons/numberOne.svg?v=07086a0ab64e116ed337deb5cc10b402" alt="Tidal">
-                              <h3 class="ws10-c-card-addons__title"><strong>OneNumber</strong></h3>
+                            </li>         <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                            <div class="ws10-c-card ws10-c-card--no-shadow">
+                                <div class="ws10-c-card-addons">
+                                <div class="ws10-c-card-addons__box">
+                                    <img class="ws10-u--pr1x" src="img/section-addons/numberOne.svg?v=07086a0ab64e116ed337deb5cc10b402" alt="Tidal">
+                                    <h3 class="ws10-c-card-addons__title"><strong>OneNumber</strong></h3>
+                                </div>
+                                <p class="ws10-c-card-addons__paragraph ws10-u--pb6x"><strong>Mismo número de teléfono y misma tarifa de voz y datos en todos tus dispositivos</strong> sin necesidad de tener el móvil cerca y sin cambiar la SIM.</p>
+                                <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 1 mes, después 5€/mes para smartwatch, Tablet o teléfono secundario y 1€/mes para Smart speaker con Alexa.</p>
+                                </div>
                             </div>
-                            <p class="ws10-c-card-addons__paragraph ws10-u--pb5x">Mismo número
-                              de teléfono y misma tarifa de voz y datos en todos tus
-                              dispositivos sin necesidad de tener el móvil cerca y sin cambiar
-                              la SIM.</p>
-                            <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                              durante 1 mes, después 5€/mes para smartwatch, Tablet o teléfono
-                              secundario y 1€/mes para Smart speaker con Alexa.</p>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                        <div class="ws10-c-card ws10-c-card--no-shadow">
-                          <div class="ws10-c-card-addons">
-                            <div class="ws10-c-card-addons__box">
-                              <img class="ws10-u--pr1x" src="img/section-addons/securenet-family.svg?v=48adeb63fc6ff54242b372b68c0bf9ec" alt="SecureNet">
-                              <h3 class="ws10-c-card-addons__title"><strong>Secure Net Family</strong>
-                              </h3>
+                            </li>         <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                            <div class="ws10-c-card ws10-c-card--no-shadow">
+                                <div class="ws10-c-card-addons">
+                                <div class="ws10-c-card-addons__box">
+                                    <img class="ws10-u--pr1x" src="img/section-addons/securenet-family.svg?v=48adeb63fc6ff54242b372b68c0bf9ec" alt="SecureNet Family">
+                                    <h3 class="ws10-c-card-addons__title"><strong>Secure Net Family</strong></h3>
+                                </div>
+                                <p class="ws10-c-card-addons__paragraph ws10-u--pb6x"><strong>Secure Net Family</strong> te protege de <strong>virus (malware) y páginas fraudulentas (phishing)</strong>, permitiendo además aplicar políticas de control parental en todos slos dispositivos de tu hogar.</p>
+                                <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 5€/mes (IVA incluido).</p>
+                                </div>
                             </div>
-                            <p class="ws10-c-card-addons__paragraph ws10-u--pb6x"><strong>Secure
-                                Net Family</strong>
-                              te protege de
-                              <strong>virus (malware) y páginas fraudulentas (phishing)</strong>,
-                              permitiendo además aplicar políticas de control parental en todos
-                              los dispositivos de tu hogar.</p>
-                            <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                              durante 3 meses, después 5€/mes (IVA incluido).</p>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                        <div class="ws10-c-card ws10-c-card--no-shadow">
-                          <div class="ws10-c-card-addons">
-                            <div class="ws10-c-card-addons__box">
-                              <img class="ws10-u--pr1x" src="img/section-addons/tidal.svg?v=4abc131faca749581d3cbd2f2965d13b" alt="Tidal">
-                              <h3 class="ws10-c-card-addons__title"><strong>TIDAL</strong></h3>
+                            </li>         <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                            <div class="ws10-c-card ws10-c-card--no-shadow">
+                                <div class="ws10-c-card-addons">
+                                <div class="ws10-c-card-addons__box">
+                                    <img class="ws10-u--pr1x" src="img/section-addons/tidal.svg?v=4abc131faca749581d3cbd2f2965d13b" alt="Tidal">
+                                    <h3 class="ws10-c-card-addons__title"><strong>TIDAL</strong></h3>
+                                </div>
+                                <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Plataforma de música en streaming para que disfrutes de tu música con la mejor calidad de audio.</p>
+                                <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 7,99€/mes.</p>
+                                </div>
                             </div>
-                            <p class="ws10-c-card-addons__paragraph ws10-u--pb8x">Plataforma de
-                              música en streaming para que disfrutes de tu música con la mejor
-                              calidad de audio.</p>
-                            <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                              durante 3 meses, después 7,99€/mes.</p>
-                          </div>
-                        </div>
-                      </li>
-                    </ul>
+                            </li>    </ul>
                     <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;">(*)Todos los servicios podrás gestionarlos en la App Mi Vodafone</span>
                   </div>
                 </section>
+
 
                 <!-- SIN SORPRESAS -->
                 <section class="vf-mobile ws10-u--pt12x">
@@ -1069,4 +1049,4 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
 </div>
 
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=babe333ec3a18ae823d594ff36e65876"></script>
+<script src="js/main.js?v=8a7ff3b42078456543bd58212b94b802"></script>
